--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
+   <load ="partials/head.html" />
+   <body>
+      <!-- =============== Header ================ -->
+      <header class="header">
+         <load ="partials/header.html" />
+      </header>
+      <!-- =============== Header ================ -->
+      <main class="page">
+         <!-- =============== Main Section ================ -->
+         <load ="partials/section-hero.html" />
+         <!-- =============== Hero Section ================ -->
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+         <!-- =============== Advantages Section ================ -->
+         <load ="partials/section-advantage.html" />
+         <!-- =============== Advantages Section ================ -->
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+         <!-- =============== Components Section ================ -->
+         <load ="partials/section-components.html" />
+         <!-- =============== Components Section ================ -->
 
-    <script type="module" src="/main.js"></script>
-  </body>
+         <!-- ================= How to made it Section ================ -->
+         <load ="partials/section-howtomade.html" />
+         <!-- ================= How to made it Section ================ -->
+
+         <!-- =============== Products Section ================ -->
+         <load ="partials/section-products.html" />
+         <!-- =============== Products Section ================ -->
+
+         <!-- =============== Sellers Section ================ -->
+         <load ="partials/section-sellers.html" />
+         <!-- =============== Sellers Section ================ -->
+
+         <!-- =============== Rewiews Section ================ -->
+         <load ="partials/section-revievs.html" />
+         <!-- =============== Rewiews Section ================ -->
+
+         <!-- ===============  Subscribe Section ================ -->
+         <load ="partials/section-subscribe.html" />
+         <!-- ===============  Subscribe Section ================ -->
+         <!-- =============== Main ================ -->
+      </main>
+      <!-- =============== Footer ================ -->
+      <footer class="footer">
+         <load ="partials/footer.html" />
+      </footer>
+      <!-- =============== Footer ================ -->
+      <script type="module" src="/main.js"></script>
+   </body>
 </html>
