--- a/src/index.html
+++ b/src/index.html
@@ -3,32 +3,39 @@
    <load ="partials/head.html" />
    <body>
       <!-- =============== Header ================ -->
+      <!-- Владислав Гончар  -->
       <header class="header">
          <load ="partials/header.html" />
       </header>
       <!-- =============== Header ================ -->
       <main class="page">
-         <!-- =============== Main Section ================ -->
+         <!-- =============== Hero Section ================ -->
+         <!-- Юлик -->
          <load ="partials/section-hero.html" />
          <!-- =============== Hero Section ================ -->
 
          <!-- =============== Advantages Section ================ -->
+         <!-- Вика -->
          <load ="partials/section-advantage.html" />
          <!-- =============== Advantages Section ================ -->
 
          <!-- =============== Components Section ================ -->
+         <!-- Вика???? -->
          <load ="partials/section-components.html" />
          <!-- =============== Components Section ================ -->
 
          <!-- ================= How to made it Section ================ -->
+         <!-- Андрей Навроцкий -->
          <load ="partials/section-howtomade.html" />
          <!-- ================= How to made it Section ================ -->
 
          <!-- =============== Products Section ================ -->
+         <!-- Настя Никитина -->
          <load ="partials/section-products.html" />
          <!-- =============== Products Section ================ -->
 
          <!-- =============== Sellers Section ================ -->
+         <!-- Sellers -->
          <load ="partials/section-sellers.html" />
          <!-- =============== Sellers Section ================ -->
 
@@ -42,6 +49,7 @@
          <!-- =============== Main ================ -->
       </main>
       <!-- =============== Footer ================ -->
+      <!-- Катерина Суковая -->
       <footer class="footer">
          <load ="partials/footer.html" />
       </footer>
