--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,10 @@
          <load ="partials/section-subscribe.html" />
          <!-- ===============  Subscribe Section ================ -->
          <!-- =============== Main ================ -->
+         <!-- Модалки -->
+         <load ="partials/modal-hero.html" />
+         <load ="partials/modal-revievs.html" />
+         <load ="partials/modal-subscribe.html" />
       </main>
       <!-- =============== Footer ================ -->
       <!-- Катерина Суковая -->
