--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
          <!-- =============== Products Section ================ -->
 
          <!-- =============== Sellers Section ================ -->
-         <!-- Sellers -->
+         <!-- Tania -->
          <load ="partials/section-sellers.html" />
          <!-- =============== Sellers Section ================ -->
 
@@ -48,8 +48,11 @@
          <!-- ===============  Subscribe Section ================ -->
          <!-- =============== Main ================ -->
          <!-- Модалки -->
+         <!-- Nastia -->
          <load ="partials/modal-hero.html" />
-         <load ="partials/modal-revievs.html" />
+         <!-- Tania -->
+         <load ="partials/modal-revievs.html" /> 
+         <!--  -->
          <load ="partials/modal-subscribe.html" />
       </main>
       <!-- =============== Footer ================ -->
