--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
          <!-- =============== Hero Section ================ -->
 
          <!-- =============== Advantages Section ================ -->
-         <!--  -->
+         <!-- Марина Лысак -->
          <load ="partials/section-advantage.html" />
          <!-- =============== Advantages Section ================ -->
 
@@ -44,6 +44,7 @@
          <!-- =============== Rewiews Section ================ -->
 
          <!-- ===============  Subscribe Section ================ -->
+         <!-- Anastasia Carliiciuc -->
          <load ="partials/section-subscribe.html" />
          <!-- ===============  Subscribe Section ================ -->
          <!-- =============== Main ================ -->
