Переназначил секцию на Марину лысак

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
          <!-- =============== Hero Section ================ -->
 
          <!-- =============== Advantages Section ================ -->
-         <!--  -->
+         <!-- Марина Лысак -->
          <load ="partials/section-advantage.html" />
          <!-- =============== Advantages Section ================ -->
 
