--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
          <!-- =============== Sellers Section ================ -->
 
          <!-- =============== Rewiews Section ================ -->
+         <!-- Оксана Шипик -->
          <load ="partials/section-revievs.html" />
          <!-- =============== Rewiews Section ================ -->
 
