--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,6 @@
          <load ="partials/footer.html" />
       </footer>
       <!-- =============== Footer ================ -->
-      <script type="module" src="/main.js"></script>
+      <script type="module" src="./main.js"></script>
    </body>
 </html>
