--- a/src/index.html
+++ b/src/index.html
@@ -65,5 +65,6 @@
       <!-- =============== Footer ================ -->
       <script type="module" src="./main.js"></script>
       <script type="module" src="./modal.js"></script>
+      <script type="module" src="./bodyscroll.js"></script>
    </body>
 </html>
