--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
    <load ="partials/head.html" />
+   <head>
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+      />
+   </head>
    <body>
       <!-- =============== Header ================ -->
       <!-- Владислав Гончар  -->
@@ -61,6 +67,8 @@
          <load ="partials/footer.html" />
       </footer>
       <!-- =============== Footer ================ -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+      <script type="module" src="/our-product.js"></script>
       <script type="module" src="/main.js"></script>
    </body>
 </html>
