--- a/src/index.html
+++ b/src/index.html
@@ -66,5 +66,6 @@
       <script type="module" src="./main.js"></script>
       <script type="module" src="./modal.js"></script>
       <script type="module" src="./bodyscroll.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
    </body>
 </html>
