добавил модалку. Исправил скрипты

--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,12 @@
       </footer>
       <!-- =============== Footer ================ -->
       <script type="module" src="./main.js"></script>
-      <!-- <script type="module" src="./modal.js"></script> -->
+      <script type="module" src="./modal.js"></script>
       <script type="module" src="./bodyscroll.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <script src="./modal-copy.js"></script>
+      <script src="./our-product.js"></script>
 
    </body>
 </html>
