--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
       <script type="module" src="./bodyscroll.js"></script>
 
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-      <script src="/our-product.js"></script>
+      <script type="module" src="./swipper.js"></script>
       <!-- <script type="module" src="./feedback.js"></script> -->
 
    </body>
