--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,8 @@
 
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
       <script src="./our-product.js"></script>
+      <script src="./review.js"></script>
+      
       <!-- <script type="module" src="./feedback.js"></script> -->
 
    </body>
