--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
       <script type="module" src="./swipper.js"></script>
-      <!-- <script type="module" src="./feedback.js"></script> -->
+      <script type="module" src="./feedback.js"></script>
 
    </body>
 </html>
