--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
       <script type="module" src="./main.js"></script>
       <script type="module" src="./modal.js"></script>
       <script type="module" src="./bodyscroll.js"></script>
-
+      <script src="./video.js" type="module"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
       <script type="module" src="./swipper.js"></script>
       <script type="module" src="./feedback.js"></script>
