--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,7 @@
       <script type="module" src="./bodyscroll.js"></script>
       <script src="./video.js" type="module"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-      <script src="./review.js"></script>
-      
+      <script src="./swipper.js"></script>
       <script type="module" src="./review-swipper.js"></script>
       <script type="module" src="./feedback.js"></script>
 
