--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <load ="partials/head.html" />
    <body>
       <!-- =============== Header ================ -->
